# hokori-rs

./: Cargo.toml  README.md
.github/workflows/: bench.yml  ci.yml
benches/: dedup_bench.rs  scan_bench.rs  walker_bench.rs
crates/hokori-cli/: Cargo.toml
crates/hokori-cli/src/: main.rs  progress.rs
crates/hokori-cli/src/output/: human.rs  json.rs  mod.rs  ncdu.rs
crates/hokori-scan/: Cargo.toml
crates/hokori-scan/src/: aggregator.rs  dedup.rs  lib.rs  progress.rs  tree.rs
crates/hokori-sys/: Cargo.toml
crates/hokori-sys/src/: lib.rs
crates/hokori-sys/src/fallback/: mod.rs
crates/hokori-sys/src/linux/: getdents.rs  mod.rs  openat2.rs  statx.rs
crates/hokori-sys/src/macos/: getattrlistbulk.rs  mod.rs
crates/hokori-walker/: Cargo.toml
crates/hokori-walker/src/: config.rs  entry.rs  error.rs  lib.rs  worker.rs
docs/: 02-macos-syscalls.md  05-walking-libraries.md  PROFILING.md  audit-parallelism-io.md  audit-syscall-memory.md
research/: 01-linux-syscalls.md  03-rust-du-tools.md  04-traversal-tools.md  06-complementary-tools.md
scripts/: bench_compare.sh  gen_test_tree.sh
