[package]
name = "hokori-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scanner orchestration with dedup and streaming aggregation"

[dependencies]
hokori-sys.workspace = true
hokori-walker.workspace = true
crossbeam-channel = "0.5"
parking_lot = "0.12"
ahash = "0.8"

[dev-dependencies]
tempfile = "3"
criterion.workspace = true

[[bench]]
name = "scan_bench"
harness = false
path = "../../benches/scan_bench.rs"

[[bench]]
name = "dedup_bench"
harness = false
path = "../../benches/dedup_bench.rs"
