[package]
name = "hokori-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Raw platform syscall bindings for ultra-fast filesystem traversal"

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
